ALB-for-3-Ubuntu-WebServer-TemplateCloudFormation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "ALB with 3 Ubuntu EC2 Instances",

  "Parameters": {
    "VpcCIDR": {
      "Type": "String",
      "Default": "10.0.0.0/16"
    },
    "PublicSubnet1CIDR": {
      "Type": "String",
      "Default": "10.0.1.0/24"
    },
    "PublicSubnet2CIDR": {
      "Type": "String",
      "Default": "10.0.2.0/24"
    },
    "InstanceType": {
      "Type": "String",
      "Default": "t3.micro"
    },
    "UbuntuAmiId": {
      "Type": "AWS::EC2::Image::Id",
      "Default": "ami-0fc5d935ebf8bc3bc"
    }
  },

  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Ref": "VpcCIDR" },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [{ "Key": "Name", "Value": "LabVPC" }]
      }
    },

    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },

    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },

    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": { "Ref": "PublicSubnet1CIDR" },
        "AvailabilityZone": { "Fn::Select": [0, { "Fn::GetAZs": "" }] },
        "MapPublicIpOnLaunch": true,
        "Tags": [{ "Key": "Name", "Value": "PublicSubnet1" }]
      }
    },

    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": { "Ref": "PublicSubnet2CIDR" },
        "AvailabilityZone": { "Fn::Select": [1, { "Fn::GetAZs": "" }] },
        "MapPublicIpOnLaunch": true,
        "Tags": [{ "Key": "Name", "Value": "PublicSubnet2" }]
      }
    },

    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" }
      }
    },

    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },

    "SubnetRouteAssoc1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet1" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },

    "SubnetRouteAssoc2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet2" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },

    "InstanceSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "GroupDescription": "Allow HTTP from ALB",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "SourceSecurityGroupId": { "Ref": "ALBSG" }
          }
        ]
      }
    },

    "ALBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "GroupDescription": "Allow HTTP from Internet",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },

    "TargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
	  "DependsOn": [
        "EC2Instance1",
        "EC2Instance2",
        "EC2Instance3"
      ],
      "Properties": {
        "Name": "MyLabTargetGroup",
        "VpcId": { "Ref": "VPC" },
        "Protocol": "HTTP",
        "Port": 80,
        "TargetType": "instance",
        "HealthCheckPath": "/",
        "Targets": [
          { "Id": { "Ref": "EC2Instance1" }, "Port": 80 },
          { "Id": { "Ref": "EC2Instance2" }, "Port": 80 },
          { "Id": { "Ref": "EC2Instance3" }, "Port": 80 }
        ]
      }
    },

    "ALB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
		  "Tags": [
              { "Key": "Name", "Value": "MyLabALB" }
           ],
        "Scheme": "internet-facing",
        "Subnets": [
          { "Ref": "PublicSubnet1" },
          { "Ref": "PublicSubnet2" }
        ],
        "SecurityGroups": [{ "Ref": "ALBSG" }]
      }
    },

    "ALBListener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "LoadBalancerArn": { "Ref": "ALB" },
        "Port": 80,
        "Protocol": "HTTP",
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": { "Ref": "TargetGroup" }
          }
        ]
      }
    },

    "EC2Instance1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": { "Ref": "InstanceType" },
        "ImageId": { "Ref": "UbuntuAmiId" },
        "SubnetId": { "Ref": "PublicSubnet1" },
        "SecurityGroupIds": [{ "Ref": "InstanceSG" }],
		"Tags": [
          { "Key": "Name", "Value": "EC2Instance1" }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": "#!/bin/bash\nsudo apt update -y\nsudo apt install -y apache2\nsudo systemctl enable apache2\nsudo systemctl start apache2\necho \"Server 1 - Load Balancer Test\" > /var/www/html/index.html"
          }
        }
      }
    },

    "EC2Instance2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": { "Ref": "InstanceType" },
        "ImageId": { "Ref": "UbuntuAmiId" },
        "SubnetId": { "Ref": "PublicSubnet2" },
        "SecurityGroupIds": [{ "Ref": "InstanceSG" }],
		"Tags": [
          { "Key": "Name", "Value": "EC2Instance2" }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": "#!/bin/bash\nsudo apt update -y\nsudo apt install -y apache2\nsudo systemctl enable apache2\nsudo systemctl start apache2\necho \"Server 2 - Load Balancer Test\" > /var/www/html/index.html"
          }
        }
      }
    },

    "EC2Instance3": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": { "Ref": "InstanceType" },
        "ImageId": { "Ref": "UbuntuAmiId" },
        "SubnetId": { "Ref": "PublicSubnet1" },
        "SecurityGroupIds": [{ "Ref": "InstanceSG" }],
		"Tags": [
          { "Key": "Name", "Value": "EC2Instance3" }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": "#!/bin/bash\nsudo apt update -y\nsudo apt install -y apache2\nsudo systemctl enable apache2\nsudo systemctl start apache2\necho \"Server 3 - Load Balancer Test\" > /var/www/html/index.html"
          }
        }
      }
    }
  },

  "Outputs": {
    "ALBDNS": {
      "Description": "DNS Name of the Application Load Balancer",
      "Value": { "Fn::GetAtt": ["ALB", "DNSName"] }
    }
  }
}
